improve sonar properties file and add junit xml

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,3 @@
 sonar.projectKey=ipeternella_algorithms
-sonar.coverage.exclusions=\
-  **/migrations/*.py,\
-  **/__init__.py,\
-  manage.py,\
-  tests/**/*,\
-  **/tests/**/*,\
-  scripts/**/*,\
-  .tox/**/*,\
-  .venv/**/*
-sonar.python.xunit.reportPath=**/*/test-results.xml
+sonar.python.xunit.reportPath=**/test-results.xml
 sonar.python.coverage.reportPaths=coverage.xml
