--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,7 @@
 sonar.projectKey=ipeternella_algorithms
+sonar.sources=algorithms  # the src folder that matters
+sonar.exclusions=\ 
+  **/migrations/*.py,\
+  **/__init__.py
 sonar.python.xunit.reportPath=**/test-results.xml
 sonar.python.coverage.reportPaths=coverage.xml
