--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=ipeternella_algorithms
-sonar.sources=algorithms  # the src folder that matters
+sonar.sources=algorithms
 sonar.exclusions=\ 
   **/migrations/*.py,\
   **/__init__.py
