--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=ipeternella_algorithms
 sonar.sources=algorithms
+sonar.tests=tests
 sonar.exclusions=\ 
   **/migrations/*.py,\
   **/__init__.py
