add code duplication ignore on sonar props

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,5 +4,9 @@ sonar.tests=tests
 sonar.exclusions=\ 
   **/migrations/*.py,\
   **/__init__.py
+sonar.cpd.exclusions=\
+  **/migrations/*.py,\
+  **/__init__.py,\
+  tests/**/*,
 sonar.python.xunit.reportPath=**/test-results.xml
 sonar.python.coverage.reportPaths=coverage.xml
