fix remove last comma

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,6 +7,6 @@ sonar.exclusions=\
 sonar.cpd.exclusions=\
   **/migrations/*.py,\
   **/__init__.py,\
-  tests/**/*,
+  tests/**/*
 sonar.python.xunit.reportPath=**/test-results.xml
 sonar.python.coverage.reportPaths=coverage.xml
