add docker for running sonar analysis locally

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,6 +4,9 @@ sonar.tests=tests
 sonar.exclusions=\ 
   **/migrations/*.py,\
   **/__init__.py
+sonar.coverage.exclusions=\
+  **/migrations/*.py,\
+  **/__init__.py
 sonar.cpd.exclusions=\
   **/migrations/*.py,\
   **/__init__.py,\
