change pytest cov folder to avoid possible errors

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ x-build: &dockerfile-dev-build
   dockerfile: Dockerfile.dev
 
 services:
-  sonar_server:
+  sonar:
     container_name: algorithms_sonar_server
     image: sonarqube:latest
     environment:
