--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,11 @@
 sonar.projectKey=ipeternella_algorithms
-sonar.sources=algorithms
-sonar.tests=tests
-sonar.exclusions=\ 
+sonar.exclusions=\
   **/migrations/*.py,\
   **/__init__.py
 sonar.coverage.exclusions=\
   **/migrations/*.py,\
-  **/__init__.py
+  **/__init__.py,\
+  tests/**/*
 sonar.cpd.exclusions=\
   **/migrations/*.py,\
   **/__init__.py,\
