chore(sonar): add python version prop file

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,3 +12,4 @@ sonar.cpd.exclusions=\
   tests/**/*
 sonar.python.xunit.reportPath=**/test-results.xml
 sonar.python.coverage.reportPaths=coverage.xml
+sonar.python.version=3.9
